--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </section>
     <section class="firstSectionMobile">
         <div class="firstTextMobile">
-            <h1 class="tituloMobile" id="disappearingTitleMobile">Necesitás una página web profesional</h1>
+            <h1 class="tituloMobile" id="disappearingTitleMobile">Necesitás una página web moderna</h1>
             <h3 class="subtituloMobile" id="disappearingTextMobile">En ELV8 transformamos tu visión en realidad con soluciones únicas, desde páginas web profesionales hasta plataformas de comercio electrónico avanzadas.</h3>
             <div class="buttonContainerMobile">
                 <a href="#contacto"><button id="buttonMobile">Cotizar ahora</button></a>
