--- a/index.html
+++ b/index.html
@@ -146,8 +146,6 @@
     </section>
     
     <section class="contacto" id="section4">
-        <div class="imagenContacto" id="contacto"><img src="./images/fondoContacto.jpeg" alt=""></div>
-        
         <div class="formulario">
             <div class="contact-header">
                 <h2>Cotizá en menos de 24hs</h2>
@@ -155,15 +153,9 @@
                     <div class="info-item">
                         <a href="https://wa.me/541160305637?text=Hola%2C%20quiero%20más%20información%20sobre%20sus%20servicios" target="_blank" rel="noopener noreferrer">
                             <img src="./images/whatsapp (1).png" alt="">
-                            <span>+54 1160305637</span>
+                            <span>Envíanos un whatsapp o llena el formulario </span>
                             </a>
 
-                    </div>
-                    <div class="info-item">
-                        <a href="mailto:elv8agency@gmail.com">
-                            <img src="./images/gmail (1).png" alt="">
-                            <span>elv8agency@gmail.com</span>
-                        </a>
                     </div>
                 </div>
             </div>
@@ -178,12 +170,13 @@
                     <input type="email" id="subject" name="email" placeholder="Ingresa tu mail" required>
                 </div>
                 <div class="form-group">
-                    <label for="message">Contenido</label>
+                    <label for="message">Mensaje</label>
                     <textarea id="message" name="message" placeholder="Escribe tu mensaje aquí" rows="5" required></textarea>
                 </div>
                 <button class="botonEnviar" type="submit">Enviar</button>
             </form>
         </div>
+        <div class="imagenContacto" id="contacto"><img src="./images/fondoContacto.jpeg" alt=""></div>
     </section>
 
     <footer>
