--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     </section>
     
     <section class="contacto" id="section4">
-        <div class="formulario">
+        <div class="formulario" id="contacto">
             <div class="contact-header">
                 <h2>Cotizá en menos de 24hs</h2>
                 <div class="contact-info">
@@ -176,7 +176,7 @@
                 <button class="botonEnviar" type="submit">Enviar</button>
             </form>
         </div>
-        <div class="imagenContacto" id="contacto"><img src="./images/fondoContacto.jpeg" alt=""></div>
+        <div class="imagenContacto" ><img src="./images/fondoContacto.jpeg" alt=""></div>
     </section>
 
     <footer>
