--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                     <div class="info-item">
                         <a href="https://wa.me/541160305637?text=Hola%2C%20quiero%20más%20información%20sobre%20sus%20servicios" target="_blank" rel="noopener noreferrer">
                             <img src="./images/whatsapp (1).png" alt="">
-                            <span>Envíanos un whatsapp o llena el formulario </span>
+                            <span>Mandanos un whatsapp <br> o <br>llená el formulario </span>
                             </a>
 
                     </div>
