--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                     <div class="info-item">
                         <a href="https://wa.me/541160305637?text=Hola%2C%20quiero%20más%20información%20sobre%20sus%20servicios" target="_blank" rel="noopener noreferrer">
                             <img src="./images/whatsapp (1).png" alt="">
-                            <span>Mandanos un whatsapp <br> o <br>llená el formulario </span>
+                            <p>Mandanos un whatsapp </p>
                             </a>
 
                     </div>
@@ -162,16 +162,14 @@
         
             <form class="contact-form">
                 <div class="form-group">
-                    <label for="name">Nombre</label>
-                    <input type="text" id="name" name="name" placeholder="Ingresa tu nombre" required>
+                    <label for="name">O llená el formulario y respondemos a la brevedad</label>
+                    <input type="text" id="name" name="name" placeholder="Ingresá tu nombre" required>
                 </div>
                 <div class="form-group">
-                    <label for="subject">Email</label>
-                    <input type="email" id="subject" name="email" placeholder="Ingresa tu mail" required>
+                    <input type="email" id="subject" name="email" placeholder="Ingresá tu mail" required>
                 </div>
                 <div class="form-group">
-                    <label for="message">Mensaje</label>
-                    <textarea id="message" name="message" placeholder="Escribe tu mensaje aquí" rows="5" required></textarea>
+                    <textarea id="message" name="message" placeholder="Escribe tu mensaje aquí" rows="7" required></textarea>
                 </div>
                 <button class="botonEnviar" type="submit">Enviar</button>
             </form>
