--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
         <div class="serviciosColumn">
             <div class="card">
                 <div class="cardContent">
-                <h3>Diseño web</h3>
-                <img src="./images/diseno-web (1).png" alt="">
-                <p>Hacemos que tu web se vea increíble y sea súper funcional. ¡Tu marca merece brillar online!</p>
+                    <h3>Landing pages</h3>
+                    <img src="./images/LandingPage (1).png" alt="">
+                    <p>Necesitas una landing page que atrape y venda. Fácil, rápido y listo para convertir</p>
                 </div>
-            </div>
+                </div>
             <div class="card">
                 <div class="cardContent">
                     <h3>Marketing en redes</h3>
@@ -90,9 +90,11 @@
         <div class="serviciosColumn">
             <div class="card">
                 <div class="cardContent">
-                    <h3>Landing pages</h3>
-                    <img src="./images/LandingPage (1).png" alt="">
-                    <p>Necesitas una landing page que atrape y venda. Fácil, rápido y listo para convertir</p></div></div>
+                <h3>Diseño web</h3>
+                <img src="./images/diseno-web (1).png" alt="">
+                <p>Hacemos que tu web se vea increíble y sea súper funcional. ¡Tu marca merece brillar online!</p>
+                </div>
+            </div>
             <div class="card">
                 <div class="cardContent">
                     <h3>Soporte las 24hs</h3>
