--- a/index.html
+++ b/index.html
@@ -3,35 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="./images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./images/PNG-04.png" type="image/x-icon">
     <meta name="description" content="En Elv8 transformamos ideas en realidad con diseño web moderno, marketing digital y soluciones únicas para tu negocio. ¡Eleva tu emprendimiento!">
     <link rel="stylesheet" href="styles.css">
     <title>Elv8 - Diseño Web, Marketing y Soluciones Digitales</title>
 </head>
 <body>
-    <header id="header"><h1>ELV8</h1></header>
+    <header id="header"><a href="#"><img src="./images/PNG-01.png" alt=""></a></header>
     <div class="trail-container"></div>
     <section class="firstSection" id="section1">
-        <div class="fondoMac"></div>
         <div class="firstText">
-            <h1 class="titulo" id="disappearingTitle">Necesitás una página web moderna</h1>
-
+            <h1 class="titulo" id="disappearingTitle">Transformamos <br><span> tu visión <br> en realidad</span></h1>
+            <h4 class="subtitulo" id="disappearingText">Diseño, desarrollo web y marketing digital</h4>
             <div class="buttonContainer">
-                <a href="#contacto"><button id="button1">Cotizar ahora</button></a>
-            </div>
-            <h3 class="subtitulo" id="disappearingText">En ELV8 transformamos tu visión en realidad con soluciones únicas, desde páginas web profesionales hasta plataformas de comercio electrónico avanzadas.</h3>
-        </div>
-    </section>
-    <section class="firstSectionMobile">
-        <div class="firstTextMobile">
-            <h1 class="tituloMobile" id="disappearingTitleMobile">Necesitás una página web moderna</h1>
-            <h3 class="subtituloMobile" id="disappearingTextMobile">En ELV8 transformamos tu visión en realidad con soluciones únicas, desde páginas web profesionales hasta plataformas de comercio electrónico avanzadas.</h3>
-            <div class="buttonContainerMobile">
-                <a href="#contacto"><button id="buttonMobile">Cotizar ahora</button></a>
+                <a href="https://wa.me/541160305637?text=Hola%2C%20quiero%20más%20información%20sobre%20sus%20servicios"><button class="button" id="button1">CONTACTANOS</button></a>
             </div>
         </div>
-        <div class="fondoMacMobile"></div>
+        <div class="fondoMac"></div>
     </section>
+
     <section class="slider">
         <div class="image-slider">
             <div class="image-container">
@@ -58,90 +48,73 @@
     </section>
 
     <section class="servicios" id="section2">
-        <div class="circle" id="circle1"></div>
-        <div class="circle" id="circle2"></div>
-        <div class="circle" id="circle3"></div>
-        <div class="circle" id="circle4"></div>
-        <div class="circle" id="circle5"></div>
-        <div class="circle" id="circle6"></div>
-        <div class="circle" id="circle7"></div>
-        <div class="circle" id="circle8"></div>
-        <div class="circle" id="circle9"></div>
-        <div class="circle" id="circle10"></div>
-        <div class="circle" id="circle11"></div>
-        <div class="circle" id="circle12"></div>
-        <div class="circle" id="circle13"></div>
+        <h2>Nuestros servicios</h2>
         <div class="serviciosColumn">
-            <div class="card">
-                <div class="cardContent">
-                    <h3>Landing pages</h3>
-                    <img src="./images/LandingPage (1).png" alt="">
-                    <p>Necesitas una landing page que atrape y venda. Fácil, rápido y listo para convertir</p>
+            <div class="card" id="card1">
+                <div class="cardContent" id="cardFondo1">
+                    <h4>Landing pages</h4>
+                    <p>Creamos sitios web innovadores y prácticos que brindan una experiencia de usuario única y memorable. Cada proyecto se adapta completamente a la identidad de tu marca</p>
                 </div>
                 </div>
-            <div class="card">
-                <div class="cardContent">
-                    <h3>Marketing en redes</h3>
-                    <img src="./images/publicidad-digital.png" alt="" class=".card-image">
-                    <p>Llevamos tus redes al siguiente nivel. Más likes, más ventas, más impacto</p>
-            </div>
-            </div>
-        </div>
-        <div class="serviciosColumn">
-            <div class="card">
-                <div class="cardContent">
-                <h3>Diseño web</h3>
-                <img src="./images/diseno-web (1).png" alt="">
-                <p>Hacemos que tu web se vea increíble y sea súper funcional. ¡Tu marca merece brillar online!</p>
+            <div class="card" id="card2">
+                <div class="cardContent" id="cardFondo2">
+                    <h4>Marketing en redes</h4>
+                    <p>Impulsamos tus redes sociales hacia un nuevo nivel de éxito. Te ayudamos a aumentar el número de seguidores, generar más interacción con publicaciones y convertir visitas en ventas</p>
                 </div>
             </div>
-            <div class="card">
-                <div class="cardContent">
-                    <h3>Soporte las 24hs</h3>
-                    <img src="./images/mantenimiento (1).png" alt="">
-                    <p>¿Un problema a medianoche? No pasa nada, estamos disponibles 24/7 para ayudarte.</p>
+            <div class="card" id="card3">
+                <div class="cardContent" id="cardFondo3">
+                <h4>Diseño web</h4>
+                <p>Transformamos tu página web en una herramienta poderosa. Diseños innovadores, navegación intuitiva y un enfoque estratégico que mejora la experiencia del usuario</p>
+                </div>
+            </div>
+            <div class="card" id="card4">
+                <div class="cardContent" id="cardFondo4">
+                    <h4>Mantenimiento</h4>
+                    <p>Servicios de mantenimiento y modificaciones para tu sitio web, asegurando que siempre funcione de manera óptima y se mantenga actualizado</p>
                 </div>
         </div>
         </div>
     </section>
 
     <section class="seccionNiveles" id="section3">
-        <div class="textoContainer"><h2 class="textoElevar">Queres elevar tu negocio al <span> siguiente nivel?</span></h2></div>
+            <img src="./images/cohete.png" alt="Cohete" class="cohete">
+        <div class="textoContainer"><h3 class="textoElevar">Queres elevar tu negocio al <span> siguiente nivel?</span></h3></div>
         <div class="nivelesContainer">
         <div  class="niveles" id="nivel0">
-            <h3>Nivel 0:</h3>
+            <h4>Nivel 0:</h4>
             <p>Todavía no diste el primer paso, pero ya tenés la idea en mente. Eso es lo más importante: querer hacerlo realidad. No te preocupes si no lo tenés todo resuelto, lo importante es empezar</p>
         </div>
         <div  class="niveles" id="nivel1">
-            <h3>Nivel 1:</h3>
+            <h4>Nivel 1:</h4>
             <p>Diste tu primer paso y empezaste a construir. Ahora es momento de definir tus objetivos y darles forma. ¡Vas bien!</p>
         </div>
         <div  class="niveles" id="nivel2">
-            <h3>Nivel 2:</h3>
+            <h4>Nivel 2:</h4>
             <p>Tu proyecto tiene bases sólidas. Es hora de explorar nuevas ideas y herramientas para seguir creciendo. ¡No pares ahora!</p>
         </div>
         <div  class="niveles" id="nivel3">
-            <h3>Nivel 3:</h3>
+            <h4>Nivel 3:</h4>
             <p>Ya estás logrando avances importantes. Empezás a notar resultados y eso te da fuerza. ¡Seguí adelante con confianza!</p>
         </div>
         <div  class="niveles" id="nivel4">
-            <h3>Nivel 4:</h3>
+            <h4>Nivel 4:</h4>
             <p>Estás en la mitad del camino. Es el momento de ajustar, optimizar y mantener el ritmo. ¡El éxito está cerca!</p>
         </div>
         <div  class="niveles" id="nivel5">
-            <h3>Nivel 5:</h3>
+            <h4>Nivel 5:</h4>
             <p>Tu proyecto empieza a destacar. Las metas que parecían lejanas ahora están al alcance. ¡Seguí empujando los límites!</p>
         </div>
         <div  class="niveles" id="nivel6">
-            <h3>Nivel 6:</h3>
+            <h4>Nivel 6:</h4>
             <p>Ahora jugás en las grandes ligas. Estás expandiéndote y alcanzando nuevos públicos. ¡Impresionante lo que estás logrando!</p>
         </div>
         <div  class="niveles" id="nivel7">
-            <h3>Nivel 7:</h3>
+            <h4>Nivel 7:</h4>
             <p>El impacto de tu proyecto ya se siente. Es tiempo de consolidarlo, perfeccionarlo y seguir innovando. ¡Vas increíble!</p>
         </div>
         <div  class="niveles" id="nivel8">
-            <h3>Nivel 8:</h3>
+            <h4>Nivel 8:</h4>
             <p>Lo lograste. Alcanzaste el nivel más alto, pero el crecimiento no termina. ¡Seguí soñando en grande y superando tus límites!</p>
         </div>
     </div>
@@ -150,7 +123,7 @@
     <section class="contacto" id="section4">
         <div class="formulario" id="contacto">
             <div class="contact-header">
-                <h2>Cotizá en menos de 24hs</h2>
+                <h3>Contanos un poco de tu proyecto</h3>
                 <div class="contact-info">
                     <div class="info-item">
                         <a href="https://wa.me/541160305637?text=Hola%2C%20quiero%20más%20información%20sobre%20sus%20servicios" target="_blank" rel="noopener noreferrer">
@@ -181,10 +154,14 @@
 
     <footer>
         <div class="footerIzq">
-        <h1>ELV8</h1>
+        <img src="./images/PNG-01.png" alt="">
         </div>
         <div class="footerDer">
         <h3>Todo lo que tu emprendimiento necesita</h3>
+        <div class="footerInfo">
+            <a href="https://www.instagram.com/elv8_agency" target="_blank"><img src="./images/InstagramBlanco.png" alt=""></a>
+            <p>© 2025 ELV8 agency todos los derechos reservados.</p>
+        </div>
         </div>
     </footer>
 
