--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ gtag('config', 'AW-10808865418');
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./images/PNG-04.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./images/PNG-04.png" type="image/x-icon">
     <meta name="description" content="En Elv8 transformamos ideas en realidad con diseño web moderno, marketing digital y soluciones únicas para tu negocio. ¡Eleva tu emprendimiento!">
     <link rel="stylesheet" href="styles.css">
     <title>Elv8 - Diseño Web, Marketing y Soluciones Digitales</title>
