--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@ gtag('config', 'AW-10808865418');
 </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="./images/PNG-04.png" type="image/x-icon">
-    <link rel="shortcut icon" href="./images/PNG-04.png" type="image/x-icon">
+    <link rel="icon" href="./images/favicon4848.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./images/favicon4848.png" type="image/x-icon">
     <meta name="description" content="En Elv8 transformamos ideas en realidad con diseño web moderno, marketing digital y soluciones únicas para tu negocio. ¡Eleva tu emprendimiento!">
     <link rel="stylesheet" href="styles.css">
-    <title>Elv8 - Diseño Web, Marketing y Soluciones Digitales</title>
+    <title>Elv8 - Diseño y desarrollo Web</title>
 </head>
 <body>
-    <header id="header"><a href="#"><img src="./images/PNG-01.png" alt=""></a></header>
+    <header id="header"><a href="#"><img src="./images/PNG-01.png" alt="Logo de ELV8 Agency, expertos en diseño y desarrollo web"></a></header>
     <div class="trail-container"></div>
     <section class="firstSection" id="section1">
         <div class="firstText">
@@ -34,24 +34,24 @@ gtag('config', 'AW-10808865418');
     <section class="slider">
         <div class="image-slider">
             <div class="image-container">
-                <img src="./images/Firebase.png" alt="Firebase, pagina web">
-                <img src="./images/CSS.png" alt="css, pagina web">
-                <img src="./images/Figma.png" alt="figma, pagina web">
-                <img src="./images/HTML.png" alt="html, pagina web">
-                <img src="./images/JS.png" alt="js, pagina web">
-                <img src="./images/React.png" alt="react, pagina web">
-                <img src="./images/Firebase.png" alt="firebase">
-                <img src="./images/CSS.png" alt="css">
-                <img src="./images/Figma.png" alt="figma">
-                <img src="./images/HTML.png" alt="html">
-                <img src="./images/JS.png" alt="js">
-                <img src="./images/React.png" alt="react">
-                <img src="./images/Firebase.png" alt="firebase">
-                <img src="./images/CSS.png" alt="css">
-                <img src="./images/Figma.png" alt="figma">
-                <img src="./images/HTML.png" alt="html">
-                <img src="./images/JS.png" alt="js">
-                <img src="./images/React.png" alt="react">
+                <img src="./images/Firebase.png" alt="Logotipo de Firebase, herramientas para aplicaciones web modernas">
+                <img src="./images/CSS.png" alt="CSS, diseño de estilo y apariencia de páginas web">
+                <img src="./images/Figma.png" alt="Logotipo de Figma, diseño colaborativo de interfaces">
+                <img src="./images/HTML.png" alt="HTML, estructura de páginas web modernas">
+                <img src="./images/JS.png" alt="JavaScript, programación interactiva para sitios web">
+                <img src="./images/React.png" alt="React, biblioteca para aplicaciones web dinámicas">
+                <img src="./images/Firebase.png" alt="Logotipo de Firebase, herramientas para aplicaciones web modernas">
+                <img src="./images/CSS.png" alt="CSS, diseño de estilo y apariencia de páginas web">
+                <img src="./images/Figma.png" alt="Logotipo de Figma, diseño colaborativo de interfaces">
+                <img src="./images/HTML.png" alt="HTML, estructura de páginas web modernas">
+                <img src="./images/JS.png" alt="JavaScript, programación interactiva para sitios web">
+                <img src="./images/React.png" alt="React, biblioteca para aplicaciones web dinámicas">
+                <img src="./images/Firebase.png" alt="Logotipo de Firebase, herramientas para aplicaciones web modernas">
+                <img src="./images/CSS.png" alt="CSS, diseño de estilo y apariencia de páginas web">
+                <img src="./images/Figma.png" alt="Logotipo de Figma, diseño colaborativo de interfaces">
+                <img src="./images/HTML.png" alt="HTML, estructura de páginas web modernas">
+                <img src="./images/JS.png" alt="JavaScript, programación interactiva para sitios web">
+                <img src="./images/React.png" alt="React, biblioteca para aplicaciones web dinámicas">
             </div>
         </div>
     </section>
@@ -87,7 +87,7 @@ gtag('config', 'AW-10808865418');
     </section>
 
     <section class="seccionNiveles" id="section3">
-            <img src="./images/cohete.png" alt="Cohete" class="cohete">
+            <img src="./images/cohete.png" alt="Cohete despegando, simbolizando crecimiento empresarial con ELV8 Agency" class="cohete">
         <div class="textoContainer"><h3 class="textoElevar">Queres elevar tu negocio al <span> siguiente nivel?</span></h3></div>
         <div class="nivelesContainer">
         <div  class="niveles" id="nivel0">
@@ -136,7 +136,7 @@ gtag('config', 'AW-10808865418');
                 <div class="contact-info">
                     <div class="info-item">
                         <a href="https://wa.me/541160305637?text=Hola%2C%20quiero%20más%20información%20sobre%20sus%20servicios" target="_blank" rel="noopener noreferrer">
-                            <img src="./images/whatsapp (1).png" alt="">
+                            <img src="./images/whatsapp (1).png" alt="Icono de WhatsApp, chatea con ELV8 Agency">
                             <p>Mandanos un whatsapp </p>
                             </a>
 
@@ -163,18 +163,27 @@ gtag('config', 'AW-10808865418');
 
     <footer>
         <div class="footerIzq">
-        <img src="./images/PNG-01.png" alt="">
+        <img src="./images/PNG-01.png" alt="Logotipo de ELV8 Agency en el footer">
         </div>
         <div class="footerDer">
         <h3>Todo lo que tu emprendimiento necesita</h3>
         <div class="footerInfo">
-            <a href="https://www.instagram.com/elv8_agency" target="_blank"><img src="./images/InstagramBlanco.png" alt=""></a>
+            <a href="https://www.instagram.com/elv8_agency" target="_blank"><img src="./images/InstagramBlanco.png" alt="Icono de Instagram, segui a ELV8 Agency en redes sociales"></a>
             <p>© 2025 ELV8 agency todos los derechos reservados.</p>
         </div>
         </div>
     </footer>
 
-
+    <script type="application/ld+json">{
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "ELV8 Agency",
+        "url": "https://www.elv8agency.com",
+        "logo": "https://www.elv8agency.com/images/PNG-01.png",
+        "sameAs": [
+            "https://www.instagram.com/elv8_agency"
+        ]
+        }</script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/rellax/1.12.1/rellax.min.js"></script>
