--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ gtag('config', 'AW-10808865418');
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./images/favicon4848.png" type="image/x-icon">
     <link rel="shortcut icon" href="./images/favicon4848.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <meta name="description" content="En Elv8 transformamos ideas en realidad con diseño web moderno, marketing digital y soluciones únicas para tu negocio. ¡Eleva tu emprendimiento!">
     <link rel="stylesheet" href="styles.css">
     <title>Elv8 - Diseño y desarrollo Web</title>
@@ -21,7 +22,7 @@ gtag('config', 'AW-10808865418');
     <header id="header"><a href="#"><img src="./images/PNG-01.png" alt="Logo de ELV8 Agency, expertos en diseño y desarrollo web"></a></header>
     <div class="trail-container"></div>
     <section class="firstSection" id="section1">
-        <div class="firstText">
+        <div class="firstText animate__animated animate__fadeInUp">
             <h1 class="titulo" id="disappearingTitle">Transformamos <br><span> tu visión <br> en realidad</span></h1>
             <h4 class="subtitulo" id="disappearingText">Diseño, desarrollo web y marketing digital</h4>
             <div class="buttonContainer">
