--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ gtag('config', 'AW-10808865418');
 </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="./images/favicon4848.png" type="image/x-icon">
+    <link rel="icon" href="./images/faviconBlanco2.png" type="image/x-icon">
     <link rel="shortcut icon" href="./images/favicon4848.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <meta name="description" content="En Elv8 transformamos ideas en realidad con diseño web moderno, marketing digital y soluciones únicas para tu negocio. ¡Eleva tu emprendimiento!">
@@ -19,20 +19,53 @@ gtag('config', 'AW-10808865418');
     <title>Elv8 - Diseño y desarrollo Web</title>
 </head>
 <body>
-    <header id="header"><a href="#"><img src="./images/PNG-01.png" alt="Logo de ELV8 Agency, expertos en diseño y desarrollo web"></a></header>
+    <header id="header">
+        <a href="#">
+            <img src="./images/Logo 2-02-02.png" id="logo" alt="Logo de ELV8 Agency, expertos en diseño y desarrollo web">
+        </a>
+    </header>
     <div class="trail-container"></div>
-    <section class="firstSection" id="section1">
-        <div class="firstText animate__animated animate__fadeInUp">
-            <h1 class="titulo" id="disappearingTitle">Transformamos <br><span> tu visión <br> en realidad</span></h1>
-            <h4 class="subtitulo" id="disappearingText">Diseño, desarrollo web y marketing digital</h4>
-            <div class="buttonContainer">
-                <a href="https://wa.me/541160305637?text=Hola%2C%20quiero%20más%20información%20sobre%20sus%20servicios"><button class="button" id="button1">CONTACTANOS</button></a>
+    <section class="firstSection section" id="section1">
+        <video src="./images/Video1.mp4" autoplay loop muted></video>
+            <h1 class="titulo" id="typewriter"></h1>
+            <h4 class="subtitulo animate__animated animate__zoomIn">Diseño y desarrollo de páginas web</h4>
+            <div class="buttonContainer animate__animated animate__zoomIn">
+                <a href="https://wa.me/541160305637?text=Hola%2C%20quiero%20más%20información%20sobre%20sus%20servicios"><button class="button" id="button1">Contactanos ahora!</button></a>
             </div>
-        </div>
-        <div class="fondoMac"></div>
     </section>
 
-    <section class="slider">
+    <section class="servicios section" id="section2">
+        <h2>Nuestros servicios</h2>
+        <p class="textoServicios">Estamos para ayudarte a destacar en internet, sin complicaciones</p>
+        <div class="serviciosColumn">
+            <div class="card" id="card1">
+                <div class="cardContent" id="cardFondo1">
+                    <h4>Landing page</h4>
+                    <p>Creamos sitios web innovadores y prácticos que brindan una experiencia de usuario única y memorable. Cada proyecto se adapta completamente a la identidad de tu marca</p>
+                </div>
+                </div>
+            <div class="card" id="card2">
+                <div class="cardContent" id="cardFondo2">
+                    <h4>Marketing en redes</h4>
+                    <p>Impulsamos tus redes sociales hacia un nuevo nivel de éxito. Te ayudamos a aumentar el número de seguidores, generar más interacción con publicaciones y convertir visitas en ventas</p>
+                </div>
+            </div>
+            <div class="card" id="card3">
+                <div class="cardContent" id="cardFondo3">
+                <h4>SEO</h4>
+                <p>Optimizamos tu presencia en línea con estrategias de SEO innovadoras y efectivas que posicionan tu marca en los primeros lugares de búsqueda.</p>
+                </div>
+            </div>
+            <div class="card" id="card4">
+                <div class="cardContent" id="cardFondo4">
+                    <h4 id="mantenimiento">Mantenimiento</h4>
+                    <p>Servicios de mantenimiento y modificaciones para tu sitio web, asegurando que siempre funcione de manera óptima y se mantenga actualizado</p>
+                </div>
+        </div>
+        </div>
+    </section>
+
+    <section class="slider section">
         <div class="image-slider">
             <div class="image-container">
                 <img src="./images/Firebase.png" alt="Logotipo de Firebase, herramientas para aplicaciones web modernas">
@@ -57,80 +90,16 @@ gtag('config', 'AW-10808865418');
         </div>
     </section>
 
-    <section class="servicios" id="section2">
-        <h2>Nuestros servicios</h2>
-        <div class="serviciosColumn">
-            <div class="card" id="card1">
-                <div class="cardContent" id="cardFondo1">
-                    <h4>Landing pages</h4>
-                    <p>Creamos sitios web innovadores y prácticos que brindan una experiencia de usuario única y memorable. Cada proyecto se adapta completamente a la identidad de tu marca</p>
-                </div>
-                </div>
-            <div class="card" id="card2">
-                <div class="cardContent" id="cardFondo2">
-                    <h4>Marketing en redes</h4>
-                    <p>Impulsamos tus redes sociales hacia un nuevo nivel de éxito. Te ayudamos a aumentar el número de seguidores, generar más interacción con publicaciones y convertir visitas en ventas</p>
-                </div>
-            </div>
-            <div class="card" id="card3">
-                <div class="cardContent" id="cardFondo3">
-                <h4>Diseño web</h4>
-                <p>Transformamos tu página web en una herramienta poderosa. Diseños innovadores, navegación intuitiva y un enfoque estratégico que mejora la experiencia del usuario</p>
-                </div>
-            </div>
-            <div class="card" id="card4">
-                <div class="cardContent" id="cardFondo4">
-                    <h4>Mantenimiento</h4>
-                    <p>Servicios de mantenimiento y modificaciones para tu sitio web, asegurando que siempre funcione de manera óptima y se mantenga actualizado</p>
-                </div>
+    <section class="seccionTrabajos">
+        <h2>Podés ser el próximo caso de éxito</h2>
+        <div class="trabajos">
+            <div class="trabajo" id="trabajo1"></div>
+            <div class="trabajo" id="trabajo2"></div>
+            <div class="trabajo" id="trabajo3"></div>
         </div>
-        </div>
-    </section>
-
-    <section class="seccionNiveles" id="section3">
-            <img src="./images/cohete.png" alt="Cohete despegando, simbolizando crecimiento empresarial con ELV8 Agency" class="cohete">
-        <div class="textoContainer"><h3 class="textoElevar">Queres elevar tu negocio al <span> siguiente nivel?</span></h3></div>
-        <div class="nivelesContainer">
-        <div  class="niveles" id="nivel0">
-            <h4>Nivel 0:</h4>
-            <p>Todavía no diste el primer paso, pero ya tenés la idea en mente. Eso es lo más importante: querer hacerlo realidad. No te preocupes si no lo tenés todo resuelto, lo importante es empezar</p>
-        </div>
-        <div  class="niveles" id="nivel1">
-            <h4>Nivel 1:</h4>
-            <p>Diste tu primer paso y empezaste a construir. Ahora es momento de definir tus objetivos y darles forma. ¡Vas bien!</p>
-        </div>
-        <div  class="niveles" id="nivel2">
-            <h4>Nivel 2:</h4>
-            <p>Tu proyecto tiene bases sólidas. Es hora de explorar nuevas ideas y herramientas para seguir creciendo. ¡No pares ahora!</p>
-        </div>
-        <div  class="niveles" id="nivel3">
-            <h4>Nivel 3:</h4>
-            <p>Ya estás logrando avances importantes. Empezás a notar resultados y eso te da fuerza. ¡Seguí adelante con confianza!</p>
-        </div>
-        <div  class="niveles" id="nivel4">
-            <h4>Nivel 4:</h4>
-            <p>Estás en la mitad del camino. Es el momento de ajustar, optimizar y mantener el ritmo. ¡El éxito está cerca!</p>
-        </div>
-        <div  class="niveles" id="nivel5">
-            <h4>Nivel 5:</h4>
-            <p>Tu proyecto empieza a destacar. Las metas que parecían lejanas ahora están al alcance. ¡Seguí empujando los límites!</p>
-        </div>
-        <div  class="niveles" id="nivel6">
-            <h4>Nivel 6:</h4>
-            <p>Ahora jugás en las grandes ligas. Estás expandiéndote y alcanzando nuevos públicos. ¡Impresionante lo que estás logrando!</p>
-        </div>
-        <div  class="niveles" id="nivel7">
-            <h4>Nivel 7:</h4>
-            <p>El impacto de tu proyecto ya se siente. Es tiempo de consolidarlo, perfeccionarlo y seguir innovando. ¡Vas increíble!</p>
-        </div>
-        <div  class="niveles" id="nivel8">
-            <h4>Nivel 8:</h4>
-            <p>Lo lograste. Alcanzaste el nivel más alto, pero el crecimiento no termina. ¡Seguí soñando en grande y superando tus límites!</p>
-        </div>
-    </div>
     </section>
     
-    <section class="contacto" id="section4">
+    <section class="contacto section" id="section4">
         <div class="formulario" id="contacto">
             <div class="contact-header">
                 <h3>Contanos un poco de tu proyecto</h3>
@@ -147,7 +116,7 @@ gtag('config', 'AW-10808865418');
         
             <form class="contact-form">
                 <div class="form-group">
-                    <label for="name">O llená el formulario y respondemos a la brevedad</label>
+                    <label for="name">O llená el formulario y responderemos a la brevedad</label>
                     <input type="text" id="name" name="name" placeholder="Ingresá tu nombre" required>
                 </div>
                 <div class="form-group">
@@ -159,12 +128,12 @@ gtag('config', 'AW-10808865418');
                 <button class="botonEnviar" type="submit">Enviar</button>
             </form>
         </div>
-        <div class="imagenContacto" ><img src="./images/fondoContacto.jpeg" alt=""></div>
+        <div class="imagenContacto" ></div>
     </section>
 
     <footer>
         <div class="footerIzq">
-        <img src="./images/PNG-01.png" alt="Logotipo de ELV8 Agency en el footer">
+        <img src="./images/Logo 2-02-02.png" alt="Logotipo de ELV8 Agency en el footer">
         </div>
         <div class="footerDer">
         <h3>Todo lo que tu emprendimiento necesita</h3>
