--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@ gtag('config', 'AW-10808865418');
             <img src="./images/Logo 2-02-02.png" id="logo" alt="Logo de ELV8 Agency, expertos en diseño y desarrollo web">
         </a>
     </header>
+    <a href="https://wa.me/541160305637?text=Hola%2C%20quiero%20más%20información%20sobre%20sus%20servicios" target="_blank" class="whatsapp" rel="noopener noreferrer">
+        <img src="./images/whatsapp (1).png" alt="Icono de WhatsApp, chatea con ELV8 Agency">
+        </a>
     <div class="trail-container"></div>
     <section class="firstSection section" id="section1">
         <video src="./images/Video1.mp4" autoplay loop muted></video>
@@ -134,6 +137,7 @@ gtag('config', 'AW-10808865418');
     <footer>
         <div class="footerIzq">
         <img src="./images/Logo 2-02-02.png" alt="Logotipo de ELV8 Agency en el footer">
+        <p>Dando vida a ideas únicas. Potencie su presencia online con nuestras soluciones creativas y estrategias digitales de alto impacto</p>
         </div>
         <div class="footerDer">
         <h3>Todo lo que tu emprendimiento necesita</h3>
