--- a/index.html
+++ b/index.html
@@ -66,32 +66,33 @@ gtag('config', 'AW-10808865418');
                 </div>
         </div>
         </div>
-    </section>
-
-    <section class="slider section">
-        <div class="image-slider">
-            <div class="image-container">
-                <img src="./images/Firebase.png" alt="Logotipo de Firebase, herramientas para aplicaciones web modernas">
-                <img src="./images/CSS.png" alt="CSS, diseño de estilo y apariencia de páginas web">
-                <img src="./images/Figma.png" alt="Logotipo de Figma, diseño colaborativo de interfaces">
-                <img src="./images/HTML.png" alt="HTML, estructura de páginas web modernas">
-                <img src="./images/JS.png" alt="JavaScript, programación interactiva para sitios web">
-                <img src="./images/React.png" alt="React, biblioteca para aplicaciones web dinámicas">
-                <img src="./images/Firebase.png" alt="Logotipo de Firebase, herramientas para aplicaciones web modernas">
-                <img src="./images/CSS.png" alt="CSS, diseño de estilo y apariencia de páginas web">
-                <img src="./images/Figma.png" alt="Logotipo de Figma, diseño colaborativo de interfaces">
-                <img src="./images/HTML.png" alt="HTML, estructura de páginas web modernas">
-                <img src="./images/JS.png" alt="JavaScript, programación interactiva para sitios web">
-                <img src="./images/React.png" alt="React, biblioteca para aplicaciones web dinámicas">
-                <img src="./images/Firebase.png" alt="Logotipo de Firebase, herramientas para aplicaciones web modernas">
-                <img src="./images/CSS.png" alt="CSS, diseño de estilo y apariencia de páginas web">
-                <img src="./images/Figma.png" alt="Logotipo de Figma, diseño colaborativo de interfaces">
-                <img src="./images/HTML.png" alt="HTML, estructura de páginas web modernas">
-                <img src="./images/JS.png" alt="JavaScript, programación interactiva para sitios web">
-                <img src="./images/React.png" alt="React, biblioteca para aplicaciones web dinámicas">
+        <div class="slider section">
+            <div class="image-slider">
+                <div class="image-container">
+                    <img src="./images/Firebase.png" alt="Logotipo de Firebase, herramientas para aplicaciones web modernas">
+                    <img src="./images/CSS.png" alt="CSS, diseño de estilo y apariencia de páginas web">
+                    <img src="./images/Figma.png" alt="Logotipo de Figma, diseño colaborativo de interfaces">
+                    <img src="./images/HTML.png" alt="HTML, estructura de páginas web modernas">
+                    <img src="./images/JS.png" alt="JavaScript, programación interactiva para sitios web">
+                    <img src="./images/React.png" alt="React, biblioteca para aplicaciones web dinámicas">
+                    <img src="./images/Firebase.png" alt="Logotipo de Firebase, herramientas para aplicaciones web modernas">
+                    <img src="./images/CSS.png" alt="CSS, diseño de estilo y apariencia de páginas web">
+                    <img src="./images/Figma.png" alt="Logotipo de Figma, diseño colaborativo de interfaces">
+                    <img src="./images/HTML.png" alt="HTML, estructura de páginas web modernas">
+                    <img src="./images/JS.png" alt="JavaScript, programación interactiva para sitios web">
+                    <img src="./images/React.png" alt="React, biblioteca para aplicaciones web dinámicas">
+                    <img src="./images/Firebase.png" alt="Logotipo de Firebase, herramientas para aplicaciones web modernas">
+                    <img src="./images/CSS.png" alt="CSS, diseño de estilo y apariencia de páginas web">
+                    <img src="./images/Figma.png" alt="Logotipo de Figma, diseño colaborativo de interfaces">
+                    <img src="./images/HTML.png" alt="HTML, estructura de páginas web modernas">
+                    <img src="./images/JS.png" alt="JavaScript, programación interactiva para sitios web">
+                    <img src="./images/React.png" alt="React, biblioteca para aplicaciones web dinámicas">
+                </div>
             </div>
         </div>
     </section>
+
+
 
     <section class="seccionTrabajos">
         <h2>Podés ser el próximo caso de éxito</h2>
